# internal/models/dto/chat_detail_dto.go
@@ -3,7 +3,7 @@ package dto
 import "github.com/google/uuid"
 
 type ChatDetailDTO struct {
-	Id          uuid.UUID   `json:"id"`
-	Name        string      `json:"name"`
-	EmployeeIds []uuid.UUID `json:"employeesIds"`
+	Id          uuid.UUID   `json:"id" binding:"required"`
+	Name        string      `json:"name" binding:"required"`
+	EmployeeIds []uuid.UUID `json:"employee_ids"`
 }
