# internal/models/dto/create_action_dto.go
@@ -1,0 +1,7 @@
+package dto
+
+import "github.com/google/uuid"
+
+type CreateActionDto struct {
+	Id uuid.UUID `json:"id" binding:"required"`
+}
