# internal/models/dto/error_dto.go
@@ -1,0 +1,6 @@
+package dto
+
+type ErrorDto struct {
+	Status      int    `json:"status" binding:"required"`
+	Description string `json:"description" binding:"required"`
+}
